fix: overflow for form layout

--- a/source/sass/blocks/button-square.scss
+++ b/source/sass/blocks/button-square.scss
@@ -3,8 +3,7 @@
   outline: none;
   display: block;
   box-sizing: border-box;
-  padding-top: 22px;
-  padding-bottom: 22px;
+  padding: 22px 10px;
   border: none;
   border-radius: 3px;
   background-color: $basic-green;
