--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -60,7 +60,7 @@
   }
 
   @media #{$desktop-min} {
-    margin-bottom: 10px;
+    margin-bottom: 58px;
     padding-top: 15px;
     padding-bottom: 0;
     width: 435px;
@@ -153,6 +153,7 @@
 
   @media #{$desktop-min} {
     display: flex;
+    flex-wrap: wrap;
   }
 
   @media #{$desktop-min} {
